# opendrill

./: .clang-format  .gitignore  Dockerfile  Makefile
backend/: Program.cs  backend.sln
backend/Properties/: launchSettings.json
frontend/: CMakeLists.txt  app.cpp  index.html
frontend/src/: app.cpp  drill.cpp  drill.h  line_tool.cpp  line_tool.h  map_widget.cpp  map_widget.h  tool.h
